[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/sling.png" type="Texture" id=1]
[ext_resource path="res://scripts/scptSlingshot.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/idle/1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/idle/3.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/idle/2.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 254.439, 251 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="nSlingshot" type="Node2D"]
script = ExtResource( 2 )

[node name="sTexture" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="lDown_sling" type="Line2D" parent="sTexture"]
show_behind_parent = true
light_mask = 2
points = PoolVector2Array( -399, -221, 71, -199 )
width = 15.0

[node name="lTop_sling" type="Line2D" parent="."]
points = PoolVector2Array( -399, -221, -50, -270 )
width = 15.0

[node name="pCenter" type="Position2D" parent="."]
position = Vector2( 0, -250 )

[node name="aSlingshot_Hitbox" type="Area2D" parent="."]
position = Vector2( 534, 117 )

[node name="csHitbox" type="CollisionShape2D" parent="aSlingshot_Hitbox"]
position = Vector2( -549.561, -277 )
shape = SubResource( 1 )

[node name="asNot_bird" type="AnimatedSprite" parent="."]
position = Vector2( -580, 271 )
frames = SubResource( 2 )
frame = 1
playing = true

[connection signal="input_event" from="aSlingshot_Hitbox" to="." method="_on_aSlingshot_Hitbox_input_event"]
