[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/sling.png" type="Texture" id=1]
[ext_resource path="res://scripts/scptSlingshot.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 835.438, 630.75 )

[node name="nSlingshot" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="lDown_sling" type="Line2D" parent="Sprite"]
show_behind_parent = true
light_mask = 2
points = PoolVector2Array( -399, -221, 71, -199 )
width = 15.0

[node name="lTop_sling" type="Line2D" parent="."]
points = PoolVector2Array( -399, -221, -50, -270 )
width = 15.0

[node name="pCenter" type="Position2D" parent="."]
position = Vector2( 0, -250 )

[node name="aSlingshot_Hitbox" type="Area2D" parent="."]
position = Vector2( 534, 117 )

[node name="chHitbox" type="CollisionShape2D" parent="aSlingshot_Hitbox"]
position = Vector2( -1130.56, -392.25 )
shape = SubResource( 1 )

[connection signal="input_event" from="aSlingshot_Hitbox" to="." method="_on_aSlingshot_Hitbox_input_event"]
